samples/_failures_safe/1761352162_585d23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e28dbb2.c: In function ‘main’:
./samples/SAFE/__tmp_1e28dbb2.c:129:30: error: missing terminating " character
  129 |     add_log_entry(&analyzer, "2024-01-15
      |                              ^~~~~~~~~~~
./samples/SAFE/__tmp_1e28dbb2.c:129:5: error: expected expression at end of input
  129 |     add_log_entry(&analyzer, "2024-01-15
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_1e28dbb2.c:129:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_1e28dbb2.c:54:5: note: declared here
   54 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_1e28dbb2.c:129:5: error: expected declaration or statement at end of input
  129 |     add_log_entry(&analyzer, "2024-01-15
      |     ^~~~~~~~~~~~~
